force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP-41005: create new field to store Approval Required details.</description>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>