force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DCP-41005: create new field to store Approver details.</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentives1</relationshipName>
    <type>Lookup</type>
</CustomField>