force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Apttus_Config2__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EffectiveDate__c</fullName>
    <defaultValue>DATE(2000,01,01)</defaultValue>
    <description>The incentive effective date. The incentive becomes effective on this date.</description>
    <inlineHelpText>The incentive effective date. The incentive becomes effective on this date.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>