force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Apttus_Config2__ExcludeChildrenWithActivePrograms__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExcludeChildrenWithActivePrograms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether orders from child accounts with activate rebate agreements should excluded from rebate processing. Only applicable when including orders from account hierarchy.</description>
    <inlineHelpText>Indicates whether orders from child accounts with activate rebate agreements should excluded from rebate processing. Only applicable when including orders from account hierarchy.</inlineHelpText>
    <label>Exclude Children With Active Programs ?</label>
    <type>Checkbox</type>
</CustomField>