force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Apttus_Config2__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpirationDate__c</fullName>
    <defaultValue>DATE(2099,12,31)</defaultValue>
    <description>The incentive expiration date. The incentive becomes ineffective after this date.</description>
    <inlineHelpText>The incentive expiration date. The incentive becomes ineffective after this date.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>