force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Apttus_Config2__IncentiveNumberAuto__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncentiveNumberAuto__c</fullName>
    <description>The system assigned unique incentive number. FOR INTERNAL USE ONLY. DO NOT SHOW IN SCREENS, REPORTS, ETC.</description>
    <displayFormat>ICT-{000000}</displayFormat>
    <inlineHelpText>The system assigned unique incentive number. FOR INTERNAL USE ONLY. DO NOT SHOW IN SCREENS, REPORTS, ETC.</inlineHelpText>
    <label>Incentive Number Auto (INTERNAL)</label>
    <type>AutoNumber</type>
</CustomField>