force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Apttus_Config2__LoyaltyId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LoyaltyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the loyalty incentive associated with the point accrual.</description>
    <inlineHelpText>ID of the loyalty incentive associated with the point accrual.</inlineHelpText>
    <label>Loyalty</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Point Accrual Incentives</relationshipLabel>
    <relationshipName>PointAccrualIncentives</relationshipName>
    <type>Lookup</type>
</CustomField>