force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Apttus_Config2__RegionScopeOper__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RegionScopeOper__c</fullName>
    <description>The region scope operator</description>
    <inlineHelpText>The region scope operator</inlineHelpText>
    <label>Region Scope Oper</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>not in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>