force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Change_History__c.field-meta.xml
<CustomField>
    <fullName>Change_History__c</fullName>
    <description>DCP-41005: create new field to store Change History.</description>
    <label>Change History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>