force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>DCP-41005: create new field to store Country.</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>