force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Customer_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Description__c</fullName>
    <description>DCP-41005: create new field to store customer description.</description>
    <label>Customer Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>