force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <description>DCP-41005: create new field to store Distribution Channel.</description>
    <label>Distribution Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>