force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Distribution_Channel_Description__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel_Description__c</fullName>
    <description>DCP-41005: create new field to store Distribution Channel Description.</description>
    <label>Distribution Channel Description</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>