force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Limit_View__c.field-meta.xml
<CustomField>
    <fullName>Limit_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP-41005: create new field to store Limit View.</description>
    <label>Limit View</label>
    <type>Checkbox</type>
</CustomField>