force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Master_Promotions__c.field-meta.xml
<CustomField>
    <fullName>Master_Promotions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Promotions</label>
    <referenceTo>Promotions__c</referenceTo>
    <relationshipLabel>Incentives</relationshipLabel>
    <relationshipName>Incentives</relationshipName>
    <type>Lookup</type>
</CustomField>