force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Primary_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_Line__c</fullName>
    <description>DCP-41005: create new field to store Primary Product Line details.</description>
    <label>Primary Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>