force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Promo_Channel__c.field-meta.xml
<CustomField>
    <fullName>Promo_Channel__c</fullName>
    <description>DCP-41005:Modifed field from text to multipicklist.</description>
    <label>Promo Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>OL</fullName>
            </value>
            <value>
                <fullName>O1</fullName>
            </value>
            <value>
                <fullName>O2</fullName>
            </value>
            <value>
                <fullName>O3</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>F1</fullName>
            </value>
            <value>
                <fullName>F2</fullName>
            </value>
            <value>
                <fullName>F3</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>