force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Promotion_Details__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Details__c</fullName>
    <description>DCP-41005: create new field to store Promotion Details.</description>
    <label>Promotion Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>