force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Promotion_Owner__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DCP-41005: create new field to store promotion owner.</description>
    <label>Promotion Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentives</relationshipName>
    <type>Lookup</type>
</CustomField>