force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Promotion_Redemption_Method__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Redemption_Method__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Indicates if the promotion is implicit (automatically applied) or Explicit (Manually applied). Managed by users with SL_Promotions Manager permission set. Jira Story # CMCM-12045
Data Owner: Cameo Steele / Ken Mudd</description>
    <inlineHelpText>Indicates if the promotion is Implicit (automatically applied) or Explicit (Manually applied)</inlineHelpText>
    <label>Redemption Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>