force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Promotion_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Terms_and_Conditions__c</fullName>
    <label>Promotion Terms and Conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>