force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Sales_Description__c.field-meta.xml
<CustomField>
    <fullName>Sales_Description__c</fullName>
    <description>DCP-41005: create new field to store sales description.</description>
    <label>Sales Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>