force-app/main/default/objects/Apttus_Config2__Incentive__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <description>DCP-41005: create new field to store Sales Org.</description>
    <label>Sales Org</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Org</valueSetName>
    </valueSet>
</CustomField>